--- a/com.SpringTest/src/main/resources/application-dev.yml
+++ b/com.SpringTest/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
       driver-class-name: com.mysql.jdbc.Driver
       type: com.alibaba.druid.pool.DruidDataSource
-      url: jdbc:mysql://114.115.162.117:1203/ydqc?useUnicode=true&characterEncoding=utf-8&useSSL=false
+      url: jdbc:mysql://119.29.108.164:3306/springTest?useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: root
       password: 123456
       initialSize: 5
