--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
 			<artifactId>poi</artifactId>
 			<version>3.6</version>
 		</dependency>
+		<!-- rabbit-mq -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
